--- a/client/logout.html
+++ b/client/logout.html
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to your account</h1>
-    <a href="./logout">Logout</a>
-    <a href="./logoutall">Logout from all devices</a>
+    You have logouted
 </body>
 </html>
